# trafficsimulation

./: Project report.aux  Project report.out  Project report.tex  README.md  codelistings.py  notes.txt  pyproject.toml  test.py  test2.py  traffic.py  traffic2.py  traffic_1.py  traffic_2.py
Analysis/: Project report.aux
